# DataSpider

./: .flake8  .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  MISSION.md  README.md  crawl_docs.py  next.config.js  nextjs_docs.md  pyproject.toml  requirements.txt  setup.py  simple_extractor.py  test_playground.html
backend/: .env.example  .gitignore  README.md  SETUP.md  __init__.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  playground.py
backend/app/core/: __init__.py  crawler.py
backend/app/core/security/: security.py
backend/app/core/utils/: __init__.py  rate_limiter.py  validation.py
backend/app/routers/: __init__.py  crawler.py  playground.py
backend/app/services/: __init__.py  crawler_service.py  playground_service.py  ws_manager.py
backend/myenv/: pyvenv.cfg
backend/myenv/Scripts/: activate  activate.bat
backend/static/: test_playground.html
backend/tests/: __init__.py  conftest.py  test_crawler.py  test_crawler_service.py  test_playground_service.py  test_utils.py
config/: README.md
crawl4ai/: __init__.py  async_crawler_strategy.py  cli.py
crawl4ai/core/: README.md
crawl4ai/crawlers/: README.md  __init__.py
crawl4ai/crawlers/async_crawlers/: async_configs.py  async_crawler_strategy.py  async_database.py  async_dispatcher.py  async_logger.py  async_webcrawler.py  base_strategy.py  cache_context.py  chunking_strategy.py  config.py  content_filter_strategy.py  extraction_strategy.py  markdown_generation_strategy.py  models.py  ssl_certificate.py  utils.py
crawl4ai/docs/examples/: amazon_product_extraction_using_hooks.py  full_page_screenshot_and_pdf_export.md
crawl4ai/examples/: README.md
crawl4ai/models/: __init__.py
crawl4ai/strategies/: README.md
crawl4ai/strategies/chunking/: __init__.py  chunking_strategy.py
crawl4ai/strategies/content_filtering/: __init__.py
crawl4ai/strategies/crawling/: __init__.py
crawl4ai/strategies/extraction/: __init__.py
crawl4ai/utils/: __init__.py
dataspider-frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dataspider-frontend/app/: globals.css  page.tsx
dataspider-frontend/components/: loading-spinner.tsx  try-it-now.tsx  use-case-card.tsx
dataspider-frontend/components/docs/: docs-search.tsx  (+2 more)
dataspider-frontend/hooks/: useCrawlService.ts
dataspider-frontend/pages/: 404.tsx  AmazonProductExtraction.jsx  AsyncWebCrawling.jsx  BasicWebCrawling.jsx  ClickingButtonsToLoadContent.jsx  LLMExtraction.jsx  ScreenshotAndPDFExport.jsx  _app.tsx  about.tsx  docs.module.css  docs.tsx  examples.jsx  examples.tsx  home.module.css  index.tsx  playground.tsx  pricing.tsx
dataspider-frontend/src/: App.jsx  App.module.css
dataspider-frontend/styles/: globals.css
documentation/: README.md
documentation/project/: HowTo.md
examples/scripts/: crawl_docs.py
extractors/: README.md
extractors/failed/: nextjs_docs_extractor.py  nextjs_docs_link_extractor.py
tests/: python_docs.txt  python_docs_text.txt  test_crawler.py  test_text_extractor.py
tests/integration/: test_async_dispatcher.py
(+104 files in other folders)
