[tool.poetry]
name = "crawl4ai"
version = "0.1.0"
description = "Web crawling and document processing framework"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "W0511",  # fixme
    "R0903",  # too-few-public-methods
    "R0913"   # too-many-arguments
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
